# qxkb5

./: CMakeLists.txt  README.md  main.cpp  mainsettings.cpp  mainsettings.h  mainsettings.ui  qxkb5.json  qxkb5.pro  resources.qrc
